# cortado

./: Cargo.toml  README.md
benches/: dns.rs  relay.rs
src/: config.rs  dns.rs  lib.rs  logging.rs  main.rs  metrics.rs  net.rs  reload.rs  socks.rs  stats.rs  tune.rs  udp.rs
src/platform/: mod.rs
src/platform/linux/: detect.rs  dns.rs  mod.rs  route.rs  tun.rs
src/platform/macos/: detect.rs  dns.rs  mod.rs  route.rs  tun.rs
src/platform/windows/: detect.rs  dns.rs  mod.rs  route.rs  tun.rs
tests/: ipv6.rs  socks_integration.rs  stress.rs
