[package]
name = "cortado"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "1"
anyhow = "1"
arc-swap = "1"
clap = { version = "4", features = ["derive", "color"] }
futures = "0.3"
netstack-smoltcp = "0.2"
rustix = { version = "1", features = ["process"] }
serde = { version = "1", features = ["derive"] }
socket2 = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-socks = "0.5"
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = "0.19"
rtnetlink = "0.14"
tokio-tun = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5"
widestring = "1"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["net", "socket", "ioctl"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "relay"
harness = false

[[bench]]
name = "dns"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
 